--- a/.github/workflows/MI-R4A.yml
+++ b/.github/workflows/MI-R4A.yml
@@ -28,8 +28,8 @@ env:
   DIY_P2_SH: MI-R4A/diy-part1.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: true
-  UPLOAD_WETRANSFER: false
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
