--- a/MI-R4A/mi-r4a.config
+++ b/MI-R4A/mi-r4a.config
@@ -3,6 +3,10 @@ CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-4a-gigabit=y
 CONFIG_KERNEL_BUILD_DOMAIN="20100010"
 CONFIG_KERNEL_BUILD_USER="Fk"
+
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_LIBCURL_FILE=y
