--- a/Tmall_M1/qca9531_comfast_cf-ew72.dts
+++ b/Tmall_M1/qca9531_comfast_cf-ew72.dts
@@ -121,7 +121,7 @@
 };
 
 &eth1 {
-	nvmem-cells = <&macaddr_art_0>;
+	nvmem-cells = <&macaddr_art_6>;
 	nvmem-cell-names = "mac-address";
 };
 
@@ -142,4 +142,8 @@
 	macaddr_art_0: macaddr@0 {
 		reg = <0x0 0x6>;
 	};
+	
+	macaddr_art_6: macaddr@6 {
+		reg = <0x6 0x6>;
+	};	
 };
